--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ img.link1{
     width:170px;
     height:170px;
     border:3px solid orange;
-    align-items: right;
+    align-items: left;
 }
 img.link2{
     width:170px;
@@ -27,13 +27,12 @@ img.link2{
     border:3px solid white;  
     align-items: left;
 }
-img.link3{
-    width:170px;
-    height:170px;
-    border:3px solid orange;  
-}
 div.column{
-    margin: 30px;
+  flex: 33.33%;
+  padding: 5px;
+}
+div.row{
+    display: flex;
 }
 p.main{
     font-size:18px;
@@ -48,7 +47,7 @@ p{
 /* Turns resume link into button.
 source: "https://stackoverflow.com/questions/710089/how-do-i-make-an-html-link-look-like-a-button" */
 .Link {
-    font: bold 30px Arial;
+    font: bold 40px Arial;
     background-color: #CCCCCC;
     color: orange;
     padding: 2px 2px 2px 2px;
@@ -57,9 +56,10 @@ source: "https://stackoverflow.com/questions/710089/how-do-i-make-an-html-link-l
     border-bottom: 1px solid #333333;
     border-left: 1px solid #CCCCCC;
   }
-.Link2 {
+a.Link2 {
       font: 15px Arial;
       color: orange;
+      margin: 10px;
   }
 a.Link2:hover {
       color: white;
@@ -69,6 +69,21 @@ a.Link:hover {
 }
 p.stuff{
     color: white;
-    font: 40px Arial;
+    font: 30px Arial;
     text-align: left;
+    margin: 20px;
+    float: left;
+}
+
+a.navbar-brand{
+    text-align: right;
+    font-family: Arial;
+    color: white;
+}
+a.navbar-brand:hover{
+    color: orange;
+}
+figcaption{
+    text-align: center;
+    color: orange;
 }
